siril 0.9.11
--/--/--

* New Photometric color calibration tool
* New background extraction tool handling working in 64-bit precision
* Allow registration on CFA SER sequences
* Improve mouse selection by making it more dynamic
* Display script line when error occurs
* Fixes build fail with OpenCV 4.0.1
* Code optimization: Speed-up algorithms using statistics

siril 0.9.10
16/01/19

* New astrometry tool that solves acquisition parameters from stars in the image (requires Web access and libcurl)
* New comet registration method
* Enabled previews for color saturation, asinh stretching, histogram transform and wavelets
* Added ability to join SER files
* Added a command stream using named pipes
* Added RGB flat normalisation for CFA images and command GREY_FLAT
* Added SETFINDSTAR command to define sigma and roundness parameters
* Added ASINH command and GUI function, for asinh stretching of images
* Added RGRADIENT command and GUI function
* Added negative transformation
* Made command SEQCROP scriptable
* Improved ECC alignment algorithm
* Improved global registration and fixed a bug
* Redesigned all dialog windows to conform to GNOME guidelines
* Preserving history in FITS file header when former history exists
* Preserving FITS keywords in sum stacked image
* Checking and increasing if needed maximum number of FITS that can be stacked on the system
* Automatically detecting GTK+ dark theme preference
* Adding a setting to activate image window positioning from the last session
* Fixed a bug in photometry where stars were too round
* Fixed an issue with wide chars on Windows
* Fixed some erratic behaviour when reference image was outside selection
* Fixed default rotation interpolation algorithm for register command
* Fixed a crash on sequence export with normalization
* Fixed line endings in scripts for all OS
* Fixed compilation for OpenCV 4.0
* Fixed dark optimization and added -opt option in PREPROCESS command