@@ -1789,6 +1789,7 @@ int process_convertraw(int nb) {
 	if((dir = g_dir_open(com.wd, 0, &error)) == NULL){
 		siril_log_message(_("Conversion: error opening working directory %s.\n"), com.wd);
 		fprintf (stderr, "Conversion: %s\n", error->message);
+		g_error_free(error);
 		set_cursor_waiting(FALSE);
 		return 1;
 	}
@@ -2026,6 +2027,7 @@ static gpointer stackall_worker(gpointer garg) {
 	if (check_seq(FALSE) || (dir = g_dir_open(com.wd, 0, &error)) == NULL) {
 		siril_log_message(_("Error while searching sequences or opening the directory.\n"));
 		fprintf (stderr, "stackall: %s\n", error->message);
+		g_error_free(error);
 		siril_add_idle(end_generic, NULL);
 		return NULL;
 	}
