@@ -170,6 +170,7 @@ int check_seq(int recompute_stats) {
 	}
 	if ((dir = g_dir_open(com.wd, 0, &error)) == NULL) {
 		fprintf (stderr, "check_seq: %s\n", error->message);
+		g_error_free(error);
 		g_free(com.wd);
 		com.wd = NULL;
 		return 1;
@@ -303,6 +304,7 @@ int check_only_one_film_seq(char* name) {
 	}
 	if ((dir = g_dir_open(com.wd, 0, &error)) == NULL) {
 		fprintf (stderr, "check_only_one_film_seq: %s\n", error->message);
+		g_error_free(error);
 		g_free(com.wd);
 		com.wd = NULL;
 		return 1;
