@@ -3,6 +3,7 @@ Stability update for v0.9.10
 
 * New Photometric color calibration tool
 * New background extraction tool handling working in 64-bit precision
+* Added Drag and Drop capability in the conversion treeview
 * Allow registration on CFA SER sequences
 * Improve mouse selection by making it more dynamic
 * Display script line when error occurs
